--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,17 @@
-body {
+body,
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  overscroll-behavior: none;
+  overflow: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+canvas {
+  width: 100vw;
+  height: 100vh;
+  /* position: fixed;
+  top: 0;
+  left: 0; */
+  touch-action: none;
+  -webkit-user-select: none;
 }
