--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,11 @@ html {
 canvas {
   width: 100vw;
   height: 100vh;
-  /* position: fixed;
+  position: fixed;
   top: 0;
-  left: 0; */
+  left: 0;
   touch-action: none;
   z-index: 1;
-  -webkit-user-select: none;
 }
 
 button {
