--- a/src/Loader.module.css
+++ b/src/Loader.module.css
@@ -28,6 +28,7 @@
   height: 100vh;
   position: fixed;
   z-index: 2;
+  pointer-events: none;
   top: 0;
   left: 0;
   background-color: rgb(10, 10, 10);
